# Projeto-streamlit

./: Cadastro.py  Clientes.csv  README.md  pyproject.toml
pages/: Consulta.py
